--- a/app/community_views/dashboard/projects/index.html.haml
+++ b/app/community_views/dashboard/projects/index.html.haml
@@ -38,7 +38,7 @@
               %tr
                 %td.col-picture
                   = link_to transactable.decorate.show_path do
-                    = image_tag transactable.cover_photo.image.url(:project_thumbnail)
+                    = image_tag transactable.cover_photo.image.url(:thumb)
                 %td.col-name
                   = link_to transactable.name, transactable.decorate.show_path
                 %td.col-summary
