--- a/app/community_views/shared/_transactable.html.haml
+++ b/app/community_views/shared/_transactable.html.haml
@@ -3,7 +3,7 @@
     %article.card-a{"data-equalize" => true}
       %figure
         = link_to transactable.decorate.show_path do
-          = image_tag transactable.cover_photo.image_url(:project_thumbnail)
+          = image_tag transactable.cover_photo.image_url(:thumb)
           - if transactable.try(:pending_collaboration)
             %figcaption
               = t :pending
