--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -1,10 +1,11 @@
 <header class="masthead">
   <div class="wrapper-a">
     <div class="topnav">
-      <a class="logo" href="/"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" /></a>
+      <a class="logo" href="/"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/3147/volte-logo.svg" /></a>
       <nav role="nav">
         <button class="topnav-toggle animated zoomIn">&#9776;</button>
         <ul class="nav main-menu">
+          <li><a href="/search">Find an item</a></li>
           {% if current_user == blank %}
               <li class="active">
                 <a data-modal="true" data-modal-class="sign-up-modal" data-modal-overlay-close="disabled" data-href="/users/sign_up?return_to=%2Ftransactable_types%2Fitem%2Flist" href="#">List your items</a>
@@ -23,12 +24,12 @@
               <a href="/transactable_types/item/list">List your items</a>
             </li>
 
-            {% assign pending_transactables_count = current_user.pending_transactables_count %}
+            {% assign unconfirmed_orders_count = current_user.unconfirmed_received_orders_count %}
             <li class="dropdown">
               <a class="nav-link dropdown-toggle user-dropdown" data-toggle="dropdown" href="#">
                 <span class="text">{{ current_user.first_name }}</span>
-                {% if pending_transactables_count > 0 %}
-                <span class="count">{{ pending_transactables_count }}</span>
+                {% if unconfirmed_orders_count > 0 %}
+                  <span class="count">{{ unconfirmed_orders_count }}</span>
                 {% endif %}
               </a>
               <ul class="dropdown-menu">
@@ -44,11 +45,27 @@
                 <li>
                   <a class="nav-link" href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: platform_context.transactable_types.first.id }}">
                     My Items
-                    {% if pending_transactables_count > 0 %}
-                      <span class="count">{{ pending_transactables_count }}</span>
-                    {% endif %}
                   </a>
                 </li>
+
+                {% if current_user.has_seller_profile? %}
+                  <li>
+                    <a href="{{ 'dashboard_company_orders_received_index_path' | generate_url }}">
+                      {{ 'dashboard.nav.orders_received' | t }}
+                      {% if unconfirmed_orders_count > 0 %}
+                        <span class="count">{{ unconfirmed_orders_count }}</span>
+                      {% endif %}
+                    </a>
+                  </li>
+                {% endif %}
+
+                {% if current_user.has_buyer_profile? %}
+                  <li>
+                    <a href="{{ 'dashboard_orders_path' | generate_url }}">
+                      {{ 'dashboard.nav.orders' | t }}
+                    </a>
+                  </li>
+                {% endif %}
 
                 {% if platform_context.wish_lists_enabled? %}
                   {% comment %} Favorites menu {% endcomment %}
