NM-6236 fix make an offer

--- a/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
+++ b/lib/tasks/litvault/liquid_views/listings/show/_actual.liquid
@@ -9,7 +9,7 @@
 {% else %}
   {% assign can_make_offer = true %}
   {% for order in orders %}
-    {% if order.state == 'unconfirmed' %}
+    {% if order.state == 'unconfirmed' or order.state == 'confirmed' %}
       {% assign can_make_offer = false %}
     {% endif %}
   {% endfor %}
