--- a/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard/company/transactables/_enquirer_view.liquid
@@ -75,7 +75,7 @@
                 </td>
                 {% if order.unconfirmed_or_draft? %}
                   <td class="actions">
-                    {% if order.is_draft? %}
+                    {% if order.inactive? %}
                       <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
                     {% endif %}
                     <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
