VOL-57 User closet layout

--- a/lib/tasks/volte/liquid_views/registrations--show.liquid
+++ b/lib/tasks/volte/liquid_views/registrations--show.liquid
@@ -1,83 +1,60 @@
 ---
 partial: false
 ---
+{% capture user_name %}
+  {% if user.properties.use_alias_as_name == '1' %}
+    {{ user.properties.user_alias }}
+  {% else %}
+    {{ user.name }}
+  {% endif %}
+{% endcapture %}
 <div class="wrapper-a">
-  <main class="search-results">
+  <main class="user-closet">
 
-    <div class="user-bar__name">
-      <h1>
-        <a href="{{ user.user_profile_url }}">
-          {% if user.properties.use_alias_as_name == '1' %}
-            {{ user.properties.user_alias }}
-          {% else %}
-            {{ user.name }}
-          {% endif %}
-        </a>
-      </h1>
-    </div>
+    <header class="user-closet-header">
+      <img src="{{ user.avatar_url_big }}" alt="{{ user_name }}">
+      <h1>{{ user_name }}</h1>
+    </header>
 
-    <section class="search-results__items">
+    <section class="user-closet-listing">
       {% for listing in user.listings %}
         {% assign photos = listing.photos %}
 
-        <article data-listing>
-          <div class="item-photo">
-            <img src="{{ photos[0].space_listing }}" />
-          </div>
+          <article class="transactable-listing-item" data-listing>
+            <a href="{{ listing.show_path }}" class="listing-link">
+              <figure>
+                <img src="{{ listing.photos[0].large }}" />
+                <figcaption>
+                  {% assign price_option = listing | lowest_price_without_cents_with_currency %}
+                  <dl class="rent-price">
+                    <dt>Rent</dt>
+                    <dd>{{ price_option.price }}</dd>
+                  </dl>
 
-            <div class="item-info">
-              <div class="item-description">
-                <div class="item-name">
-                  <h4>
-                    <a href="{{ listing.show_path }}" data-listing-path>{{ listing.name | filter_text }}</a>
-                  </h4>
-                  <p>
-                    {% if listing.properties.designer_name != '' and listing.properties.designer_name != nil %}
-                      Designer:
-                      {{ listing.properties.designer_name }}
+                  <dl class="retail-bond-value">
+                    <dt>Bond</dt>
+                    <dd>{{ listing.properties.bond_value | price_without_cents_with_currency }}</dd>
+                    {% if listing.properties.retail_value != blank %}
+                    <dt>Retail</dt>
+                    <dd>{{ listing.properties.retail_value | price_without_cents_with_currency }}</dd>
                     {% endif %}
-                  </p>
-                </div>
-              </div>
+                  </dl>
 
-              <div class="item-pricing">
-                <dl>
-                  {% for price in listing.action_type.sorted_pricings %}
-                    <dt>{{ price.number_of_units }} days: </dt>
-                    <dd>${{ price.price.amount }} AUD</dd>
-                  {% endfor %}
 
-                  <dt>Bond value: </dt>
-                  <dd>${{ listing.properties.bond_value }} AUD</dd>
-                </dl>
-              </div>
-            </div>
+                  {% if listing.properties.designer_name != blank %}
+                    <span class="designer">{{ listing.properties.designer_name }}</span>
+                  {% endif %}
+                </figcaption>
+              </figure>
+            </a>
 
-            <div class="item-actions">
-              <ul>
-                <li class="item-actions__primary">
-                  <form id="order_form_{{ listing.id }}" novalidate="novalidate" class="order" action="{{ 'listing_orders_path' | generate_url: listing }}" accept-charset="UTF-8" method="post">
-                    <input name="utf8" type="hidden" value="">
-                    <input name="authenticity_token" value="{{ form_authenticity_token }}" data-authenticity-token type="hidden">
-                    <input value="{{ listing.id }}" type="hidden" name="order[transactable_id]" id="order_transactable_id">
-                    <input value="{{ listing.action_type.pricings.first.id }}" type="hidden" name="order[transactable_pricing_id]" id="order_transactable_pricing_id">
-                    <input type="submit" class="button button-default button-small" value="REQUEST ITEM">
-                  </form>
-                </li>
-                <li class="item-actions__secondary">
-                  <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="button button-inverse button-small" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}">
-                    <div class="text-center"><img src="{{ 'components/modal/loader.gif' | image_url }}" /></div>
-                  </div>
-                </li>
-              </ul>
-            </div> <!-- Item actions -->
-
-        </article>
+            <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}"></div>
+          </article>
       {% endfor %}
     </section>
   </main>
 
-  <aside class="search-sidebar">
+  <aside class="user-sidebar">
     {% if request_referer != blank %}
       <a href="{{ request_referer }}">&laquo; Back</a>
     {% endif %}
@@ -85,9 +62,7 @@ partial: false
     <ul class="user-actions">
       {% if user.has_active_blog? %}
         <li>
-          <a href="{{ user.user_blog_posts_list_path }}" class="button button-inverse">
-            READ BLOG
-          </a>
+          <a href="{{ user.user_blog_posts_list_path }}" class="button button-inverse">Read Blog</a>
         </li>
       {% endif %}
 
@@ -98,7 +73,6 @@ partial: false
       <li>
         {{ user.click_to_call_button }}
       </li>
-
     </ul>
 
     {% if user.properties.biography != blank %}
@@ -111,7 +85,7 @@ partial: false
           {{ user.name }}
         {% endif %}
 
-        {{ user.properties.biography }}
+        {{ user.properties.biography | nl2br }}
       </p>
 
       <hr />
@@ -133,10 +107,12 @@ partial: false
 
     <hr />
 
-    <p><strong>Lender verified</strong></p>
+    <p class="verified-user"><strong>Lender verified</strong></p>
 
     <hr />
 
-    <a class="button-b action-flag" href="#" data-href="{{ user.inappropriate_report_path }}" data-modal="1">{{ 'inappropriate_reports.flag_as_inappropriate' | translate }}</a>
+    <p class="report-user">
+      <a href="#" data-href="{{ user.inappropriate_report_path }}" data-modal="1">{{ 'inappropriate_reports.flag_as_inappropriate' | translate }}</a>
+    </p>
   </aside>
 </div> <!-- Wrapper -->
