--- a/lib/tasks/litvault/liquid_views/registrations/_edit_options.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations/_edit_options.liquid
@@ -1,5 +1,5 @@
   <div class="options">
-    <a href="#" onclick="$('form#edit_user').submit()" class="btn btn-default">Save</a>
+    <button type="button" class="btn btn-default" data-submit-form="form.simple_form">Save</button>
     {% if current_user.has_buyer_profile? %}
       <a target="_blank" href="{{ current_user.user_profile_url }}">{{ 'dashboard.user_profile.view_profile_html' | t }}</a>
     {% endif %}
