NM-6285 Copy templates from production

--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -60,7 +60,7 @@ partial: false
               </li>
             </ul>
           </div>
-          <input type="hidden" name="sort" value="name_asc"/>
+          <input type="hidden" name="sort" value="created_at_desc"/>
           <input type="hidden" name="lg_custom_attributes[item_type][]" value=""/>
           <input class="search-input" name="query" placeholder="Search" type="text" />
           <button>
@@ -136,10 +136,10 @@ partial: false
         <div class="box">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -71.876 100 143.752" class="bond-verification"><path d="M-15.625-65.627h31.25v37.501h-31.25v-37.501zm-6.25 43.753h43.748v-50.002h-43.748v50.002z"/><path d="M37.725 71.876h-75.447C-44.49 71.876-50 66.368-50 59.602v-97.327c0-6.769 5.51-12.276 12.277-12.276h22.1v21.876h31.248V-50h22.1C44.495-50.001 50-44.494 50-37.725v97.326c0 6.767-5.504 12.275-12.275 12.275M-37.723-43.75a6.03 6.03 0 0 0-6.025 6.024V59.6a6.032 6.032 0 0 0 6.025 6.026h75.447a6.037 6.037 0 0 0 6.027-6.026v-97.325a6.034 6.034 0 0 0-6.027-6.024H21.873v21.875h-43.748V-43.75h-15.848z"/><path d="M.001 59.375c-8.849 0-17.661-.497-26.199-1.479l-2.842-.328.072-2.859c.512-19.246 10.798-29.842 28.967-29.842 18.17 0 28.457 10.596 28.968 29.842l.072 2.859-2.843.328A230.097 230.097 0 0 1 .001 59.375M-22.56 52a227.802 227.802 0 0 0 45.118 0c-1.209-14.047-8.613-20.886-22.56-20.886-13.944 0-21.349 6.839-22.558 20.886M.002 16.352c-7.85 0-14.238-6.391-14.238-14.24 0-7.851 6.389-14.234 14.238-14.234 7.846 0 14.235 6.385 14.235 14.234.001 7.851-6.389 14.24-14.235 14.24m0-22.224a7.998 7.998 0 0 0-7.988 7.984A7.997 7.997 0 0 0 .002 10.1a7.992 7.992 0 0 0 7.983-7.988A7.991 7.991 0 0 0 .002-5.872"/></svg>
           <h3>
-            BOND and<br class="hide-mobile" /><span class="hide-desktop">&nbsp;</span>ID verficiation
+            Bond and<br class="hide-mobile" /><span class="hide-desktop">&nbsp;</span>ID verficiation
           </h3>
           <p>
-            We verify all borrowers and lenders. We make sure everyone has the ability to hold a security bond.
+            We verify all borrowers and lenders. Lenders have the ability to list a bond amount.
           </p>
         </div>
         <div class="box">
