--- a/lib/tasks/volte/liquid_views/waiver_agreement_templates--show.liquid
+++ b/lib/tasks/volte/liquid_views/waiver_agreement_templates--show.liquid
@@ -1,11 +1,9 @@
 ---
 partial: false
 ---
-
 <header class="dialog__header">
   <h2>{{ waiver_agreement_template.name }}</h2>
 </header>
-
 
 <p><strong>{{ current_user.name }}</strong> agrees to:</p>
 
@@ -13,6 +11,6 @@ partial: false
 
 <ul>
   <li>For Item: <strong>{{ @transactable.name }}</strong></li>
-  <li>Bond Value: <strong>{{ transactable.properties.bond_value }}</strong></li>
+  <li>Bond Value: <strong>{% if @transactable.properties.bond_value == blank %}N/A{% else %}${{ @transactable.properties.bond_value | price_with_cents_with_currency }} AUD{% endif %}</strong></li>
+  <li>Retail Value: <strong>{% if @transactable.properties.retail_value == blank %}N/A{% else %}${{ @transactable.properties.retail_value | price_with_cents_with_currency }} AUD{% endif %}</strong></li>
 </ul>
-
