NM-6285 Pages updates from production

--- a/lib/tasks/volte/pages/about.liquid
+++ b/lib/tasks/volte/pages/about.liquid
@@ -29,7 +29,7 @@ name: About
       Our model also supports the fashion industry – we champion designers and allow up and coming designers to reach new markets through the designer dress rental industry.
     </p>
     <h3>
-            Our Model
+            Our model
         </h3>
     <p>
       <strong>Partnering:</strong> We are always looking for new stores and designers to partner with. Both current and old season stock can be listed. The Volte is a risk free way to enter the online designer rental market.
