VOL-71 Update courier page

--- a/lib/tasks/volte/pages/courier.liquid
+++ b/lib/tasks/volte/pages/courier.liquid
@@ -127,17 +127,25 @@ name: Courier
       <thead>
         <tr>
           <th>
-            Same city
+            Area
           </th>
           <th>
-            Same or next business day
+            Estimated delivery
           </th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>
-            Sydney, Melbourne, Adelaide, Brisbane
+            Same city
+          </td>
+          <td>
+            Same or next business day
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Between Sydney, Melbourne, Perth, Adelaide, Brisbane
           </td>
           <td>
             1-2 business days
