NM-6276 Fix new lines in description

--- a/lib/tasks/volte/liquid_views/listings--show.liquid
+++ b/lib/tasks/volte/liquid_views/listings--show.liquid
@@ -142,7 +142,7 @@
         </div>
         <div class="tab-pane" id="tab-description">
           <p>
-            {{ listing.description }}
+            {{ listing.description | filter_text | custom_sanitize }}
           </p>
         </div>
       </div>
